# wayland-wsegl

./: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  wayland-egl.pc.in
